; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_port.c_mlx4_unregister_vlan.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_port.c_mlx4_unregister_vlan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@RES_VLAN = common dso_local global i64 0, align 8
@RES_OP_RESERVE_AND_MAP = common dso_local global i32 0, align 4
@MLX4_CMD_FREE_RES = common dso_local global i32 0, align 4
@MLX4_CMD_TIME_CLASS_A = common dso_local global i32 0, align 4
@MLX4_CMD_WRAPPED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx4_unregister_vlan(%struct.mlx4_dev* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.mlx4_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %9 = call i64 @mlx4_is_mfunc(%struct.mlx4_dev* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %3
  %12 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i64, i64* %5, align 8
  %15 = trunc i64 %14 to i32
  %16 = shl i32 %15, 8
  %17 = load i64, i64* @RES_VLAN, align 8
  %18 = trunc i64 %17 to i32
  %19 = or i32 %16, %18
  %20 = load i32, i32* @RES_OP_RESERVE_AND_MAP, align 4
  %21 = load i32, i32* @MLX4_CMD_FREE_RES, align 4
  %22 = load i32, i32* @MLX4_CMD_TIME_CLASS_A, align 4
  %23 = load i32, i32* @MLX4_CMD_WRAPPED, align 4
  %24 = call i32 @mlx4_cmd_imm(%struct.mlx4_dev* %12, i32 %13, i32* %7, i32 %19, i32 %20, i32 %21, i32 %22, i32 %23)
  br label %30

25:                                               ; preds = %3
  %26 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @__mlx4_unregister_vlan(%struct.mlx4_dev* %26, i64 %27, i32 %28)
  br label %30

30:                                               ; preds = %25, %11
  ret void
}

declare dso_local i64 @mlx4_is_mfunc(%struct.mlx4_dev*) #1

declare dso_local i32 @mlx4_cmd_imm(%struct.mlx4_dev*, i32, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @__mlx4_unregister_vlan(%struct.mlx4_dev*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
